--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-bottom: 8px;
 }
 .header__imageContainer {
   -webkit-box-flex: 1;
@@ -210,4 +211,217 @@ body {
 }
 .header__bottom p span {
   font-weight: 500;
+}
+
+/*TOPPRODUCTS*/
+.topProducts__body {
+  padding: 12px 16px 16px 16px;
+  background-color: #F5F5F5;
+}
+.topProducts__title {
+  color: #000000;
+  font-size: 16px;
+  line-height: 15px;
+  font-weight: 700;
+}
+.topProducts__products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-column-gap: 12px;
+     -moz-column-gap: 12px;
+          column-gap: 12px;
+}
+
+.product__body {
+  position: relative;
+  height: 106px;
+  width: 100%;
+  min-width: 224px;
+  max-width: 400px;
+  padding: 16px 12px 12px 12px;
+  background-color: #ffffff;
+  color: #2D2D2D;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.product__body_heighter {
+  height: 130px;
+  position: relative;
+}
+.product__body_heighter .product__top {
+  padding-top: 24px;
+}
+.product__body_heighter .product__top .rating {
+  top: 20px;
+  right: 16px;
+  position: absolute;
+}
+.product__body:hover {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+  -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
+}
+.product__body:hover .product__button {
+  color: #BC284B;
+}
+.product__body:hover .product__button svg path {
+  fill: #BC284B;
+}
+.product__ribbon {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  top: 7px;
+  width: initial;
+  height: 28px;
+  position: absolute;
+  left: -7px;
+  font-weight: 400;
+  font-size: 14px;
+  padding: 4px 8px;
+  background-color: #035D4C;
+  pointer-events: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: initial;
+      -ms-flex-pack: initial;
+          justify-content: initial;
+  color: #ffffff;
+}
+.product__ribbon p {
+  font-weight: 600;
+  line-height: 20px;
+}
+.product__ribbon p::before {
+  content: "";
+  border-style: solid;
+  width: 0;
+  height: 0;
+  line-height: 0;
+  position: absolute;
+  top: -4px;
+  border-width: 4px 7px 0 0;
+  left: 0;
+  border-color: transparent #2D2D2D transparent transparent;
+}
+.product__top {
+  margin-bottom: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
+}
+.product__title {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  font-weight: 600;
+  font-size: 16px;
+}
+.product__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.product__members {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  white-space: nowrap;
+}
+.product__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-column-gap: 4px;
+     -moz-column-gap: 4px;
+          column-gap: 4px;
+  color: #FF4A64;
+  min-width: 100px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.product__button p {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 13px;
+}
+
+.rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 4px;
+     -moz-column-gap: 4px;
+          column-gap: 4px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.rating__info {
+  text-align: end;
+}
+.rating__name {
+  color: #1564BF;
+  font-weight: 600;
+  line-height: 14px;
+  max-width: 108px;
+  text-transform: capitalize;
+  font-size: 16px;
+}
+.rating__stars {
+  text-align: end;
+}
+.rating__score {
+  background: #1564BF;
+  padding: 1px 4px;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-width: 28px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.rating__score p {
+  color: white;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  font-weight: 700;
 }
