--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+  position: relative;
 }
 
 /*HEADER*/
@@ -142,7 +143,7 @@ body {
   background-image: url(https://images.top10.com/f_auto,fl_progressive:semi,q_auto/v1/production/charts/uploads/photo/Frame-100-3.20220607140717.20220714080445.jpg);
   width: 100%;
   height: 330px;
-  z-index: -1;
+  z-index: 0;
   display: block;
   position: absolute;
   background-size: cover;
@@ -160,6 +161,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
 }
 .header__content {
   -webkit-box-flex: 1;
@@ -181,6 +183,9 @@ body {
   margin-top: 40px;
   font-size: 28px;
   font-weight: 700;
+}
+.header__title p {
+  color: #ffffff;
 }
 .header__bottom {
   -ms-flex-item-align: start;
@@ -208,12 +213,16 @@ body {
 }
 .header__bottom p {
   font-size: 14px;
+  color: #ffffff;
 }
 .header__bottom p span {
   font-weight: 500;
 }
 
 /*TOPPRODUCTS*/
+.topProducts {
+  margin-bottom: 20px;
+}
 .topProducts__body {
   padding: 12px 16px 16px 16px;
   background-color: #F5F5F5;
@@ -275,7 +284,7 @@ body {
   -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
 }
-.product__body:hover .product__button {
+.product__body:hover .product__button p {
   color: #BC284B;
 }
 .product__body:hover .product__button svg path {
@@ -306,6 +315,7 @@ body {
 .product__ribbon p {
   font-weight: 600;
   line-height: 20px;
+  color: #ffffff;
 }
 .product__ribbon p::before {
   content: "";
@@ -367,12 +377,13 @@ body {
   -webkit-column-gap: 4px;
      -moz-column-gap: 4px;
           column-gap: 4px;
-  color: #FF4A64;
   min-width: 100px;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 .product__button p {
+  margin: 0;
+  color: #FF4A64;
   font-size: 14px;
   font-weight: 700;
   line-height: 13px;
