--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -117,3 +117,235 @@ body {
         }
     }
 }
+
+.ribbon{
+    display: inline-flex;
+    
+    width: initial;
+    height: 28px;
+    position: absolute;
+    
+
+    font-weight: 400;
+    font-size: 14px;
+    padding: 4px 8px;
+    pointer-events: none;
+    align-items: center;
+    justify-content: initial;
+    color: #ffffff;
+
+        p{
+            font-weight: 600;
+            line-height: 20px;
+            color: #ffffff;
+
+            &::before{
+                content: '';
+                border-style: solid;
+                width: 0;
+                height: 0;
+                line-height: 0;
+                position: absolute;
+                top: -4px;
+                border-width: 4px 7px 0 0;
+                left: 0;
+                border-color: transparent #2D2D2D transparent transparent;
+            }
+        }
+}
+
+.scoreCard {
+    display: none;
+
+    position: absolute;
+    transform: initial;
+    width: 270px;
+    left: calc(100% + 10px);
+    right: unset;
+    top: 0px;
+    border-radius: 4px;
+    z-index: 1;
+
+    background: white;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px;
+    max-width: 500px;
+
+    &::before{
+        content: " ";
+        top: 15px;
+        border: 6px solid rgba(255, 255, 255, 0);
+        position: absolute;
+        pointer-events: none;
+        z-index: 2;
+        width: 0px;
+        height: 0px;
+        border-right-color: rgb(226, 226, 226);
+        left: -12px;
+    }
+
+    &::after{
+        top: 15px;
+        border: 6px solid rgba(255, 255, 255, 0);
+        content: " ";
+        position: absolute;
+        pointer-events: none;
+        z-index: 2;
+        width: 0px;
+        height: 0px;
+
+        border-right-color: white;
+        left: -11px;
+    }
+
+    &__items {
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+        overflow: hidden;
+        box-sizing: border-box;
+        margin: 0px;
+        min-width: 0px;
+        padding: 0px;
+        font-weight: 400;
+        font-size: 14px;
+    }
+
+    &__item {
+        font-weight: 400;
+        font-size: 14px;
+        display: flex;
+        column-gap: 8px;
+        background: rgb(245, 245, 245);
+        padding: 12px;
+        align-items: start;
+        animation-name: scoreCardAnim;
+
+        opacity: 0;
+
+        word-break: break-word;
+        animation-fill-mode: forwards;
+        animation-duration: 0.2s;
+        animation-timing-function: linear;
+        animation-iteration-count: 1;
+
+        svg{
+            width: 16px;
+            height: 16px;
+            display: block;
+            flex-shrink: 0;
+        }
+    }
+
+    &__item:first-child, &__item:last-child {
+        background: white;
+    }
+
+    &__item:nth-of-type(1) {
+        animation-delay: 0.1s;
+    }
+    &__item:nth-of-type(2) {
+        animation-delay: 0.2s;
+    }
+    &__item:nth-of-type(3) {
+        animation-delay: 0.3s;
+    }
+
+    &__info {
+        flex-grow: 1;
+    }
+
+    &__title {
+        box-sizing: border-box;
+        margin: 0px 0px 4px;
+        min-width: 0px;
+        padding: 0px;
+        color: rgb(21, 100, 191);
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 14px;
+    }
+
+    &__discribe {
+        box-sizing: border-box;
+        margin: 0px;
+        min-width: 0px;
+        padding: 0px;
+        color: rgb(45, 45, 45);
+        font-weight: 400;
+        font-size: 12px;
+
+        a{
+            text-decoration: underline;
+            text-underline-offset: 2px;
+            position: relative;
+            display: inline-block;
+            padding-left: 2px;
+            color: rgb(45, 45, 45);
+
+            strong{
+                color: rgb(45, 45, 45);
+                font-weight: 600;
+            }
+        }
+    }
+
+    &__value {
+        width: 25px;
+        color: white;
+        font-size: 14px;
+        background: rgb(21, 100, 191);
+        padding: initial;
+
+        box-sizing: border-box;
+        margin: 0px;
+        min-width: 0px;
+        font-weight: 600;
+        text-align: center;
+        border-radius: 4px;
+        flex-shrink: 0;
+    }
+
+    &__link {
+        padding: 12px;
+        animation-delay: 0.5s;
+        background: rgb(245, 245, 245);
+
+        box-sizing: border-box;
+        margin: 0px;
+        min-width: 0px;
+    
+        animation-name: scoreCardAnim;
+        opacity: 0;
+        animation-fill-mode: forwards;
+        animation-duration: 0.2s;
+        animation-timing-function: linear;
+        animation-iteration-count: 1;
+        text-align: end;
+
+        a{
+            position: static;
+            background: initial;
+            padding: initial;
+            color: rgb(121, 121, 121);
+            font-size: 12px;
+            font-weight: 400;
+            
+            line-height: 14px;
+        }
+    }
+}
+
+@keyframes scoreCardAnim {
+    0% {
+        transform: translateY(10px);
+        opacity: 0;
+    }
+
+    80% {
+        transform: translateY(-3px);
+    }
+
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
