--- a/#source/scss/_content.scss
+++ b/#source/scss/_content.scss
@@ -33,6 +33,7 @@
 
 .chart {
     width: 100%;
+    margin-bottom: 110px;
     &__items {
     }
 }
@@ -295,8 +296,6 @@
         
     }
 }
-
-
 
 .sidepanel {
     
