--- a/#source/scss/_content.scss
+++ b/#source/scss/_content.scss
@@ -29,6 +29,9 @@
 
     &__chart {
     }
+
+    &__questions {
+    }
 }
 
 .chart {
@@ -523,3 +526,52 @@
     &__scoreCard {
     }
 }
+
+
+
+.questions {
+
+    display: block;
+    padding: 40px 0 0;
+    width: 100%;
+    margin: 0 10px 0 0;
+    position: relative;
+
+    &__topTen {
+        display: flex;
+        width: 100%;
+        word-break: break-word;
+        justify-content: space-evenly;
+        background-color: #F5F5F5;
+        max-width: 835px;
+        height: 60px;
+        align-items: center;
+        margin-bottom: 60px;
+
+        p{
+            padding: 12px;
+            display: block;
+            font-weight: 400;
+            font-size: 14px;
+            word-break: break-word;
+            color: #797979;
+        }
+    }
+
+    &__topTenLogo {
+        padding: 12px;
+    }
+
+    
+
+    &::before{
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: -5px;
+        border-top: 1px solid #d5d5d5;
+    }
+}
+
